--- a/index.html
+++ b/index.html
@@ -4,27 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shortest Path Algorithms</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-
-    h1 {
-      text-align: center;
-    }
-
-    #graph-input {
-      width: 100%;
-      height: 200px;
-    }
-
-    #output {
-      margin-top: 20px;
-      border: 1px solid #ccc;
-      padding: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <h1>Shortest Path Algorithms</h1>
