--- a/index.html
+++ b/index.html
@@ -1,40 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shortest Path Algorithms</title>
-  <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-  <h1>Shortest Path Algorithms</h1>
-  
-  <h2>Bellman-Ford</h2>
-  <div>
-    <label for="source-node-bf">Source Node:</label>
-    <input type="text" id="source-node-bf" placeholder="Enter source node">
-    <br>
-    <label for="graph-input-bf">Graph (JSON):</label>
-    <br>
-    <textarea id="graph-input-bf" placeholder="Enter graph in JSON format"></textarea>
-    <br>
-    <button onclick="runBellmanFord()">Run Bellman-Ford</button>
-  </div>
-  <div id="output-bf"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shortest Path Algorithms</title>
+    <link rel="stylesheet" href="assets/style.css" />
+    <script src="assets/algoritma.js"></script>
+    <script defer src="assets/index.js"></script>
+  </head>
+  <body>
+    <h1>Shortest Path Algorithms</h1>
 
-  <h2>Dijkstra</h2>
-  <div>
-    <label for="source-node-dijkstra">Source Node:</label>
-    <input type="text" id="source-node-dijkstra" placeholder="Enter source node">
-    <br>
-    <label for="graph-input-dijkstra">Graph (JSON):</label>
-    <br>
-    <textarea id="graph-input-dijkstra" placeholder="Enter graph in JSON format"></textarea>
-    <br>
-    <button onclick="runDijkstra()">Run Dijkstra</button>
-  </div>
-  <div id="output-dijkstra"></div>
+    <section>
+      <h2>Bellman-Ford</h2>
+      <div>
+        <label for="source-node-bf">Source Node:</label>
+        <input
+          type="text"
+          id="source-node-bf"
+          placeholder="Enter source node"
+        />
+        <br />
+        <label for="graph-input-bf">Graph (JSON):</label>
+        <br />
+        <textarea
+          id="graph-input-bf"
+          placeholder="Enter graph in JSON format"
+        ></textarea>
+        <br />
+        <button onclick="runBellmanFord()">Run Bellman-Ford</button>
+      </div>
+      <div id="output-bf"></div>
+    </section>
 
-  <script src="assets/algoritma.js"></script>
-</body>
+    <section>
+      <h2>Dijkstra</h2>
+      <div>
+        <label for="source-node-dijkstra">Source Node:</label>
+        <input
+          type="text"
+          id="source-node-dijkstra"
+          placeholder="Enter source node"
+        />
+        <br />
+        <label for="graph-input-dijkstra">Graph (JSON):</label>
+        <br />
+        <textarea
+          id="graph-input-dijkstra"
+          placeholder="Enter graph in JSON format"
+        ></textarea>
+        <br />
+        <button onclick="runDijkstra()">Run Dijkstra</button>
+      </div>
+      <div id="output-dijkstra"></div>
+    </section>
+  </body>
 </html>
