mendesain tampilan web

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     <script defer src="assets/index.js"></script>
   </head>
   <body>
-    <h1>Shortest Path Algorithms</h1>
+    <section class="hidden">
+      <h1>Shortest Path Algorithms</h1>
+      <h2>Kelompok: </h2>
+      <div>
+        <p class="nama hidden hidden-kiri" style="--order: 1;">1. Muhammad Fikri Wahidin (1301213505)</p>
+        <p class="nama hidden hidden-kiri" style="--order: 2;">2. Mursyid Najib Muhana (1301210411)</p>
+        <p class="nama hidden hidden-kiri" style="--order: 3;">3. Rashad Izza Andredi (1301213309)</p>
+      </div>
+    </section>
 
-    <section>
+    <section class="hidden">
       <h2>Bellman-Ford</h2>
       <div>
         <label for="source-node-bf">Source Node:</label>
@@ -33,7 +41,7 @@
       <div id="output-bf"></div>
     </section>
 
-    <section>
+    <section class="hidden">
       <h2>Dijkstra</h2>
       <div>
         <label for="source-node-dijkstra">Source Node:</label>
