--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,7 @@
             id="graph-input"
             placeholder="Masukkan graf dalam format JSON"
             rows="7"
+            cols="35"
             class="px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 text-black"
           ></textarea>
         </div>
