menambahkan peta graf (sementara)

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,34 @@
       </div>
     </section>
     <section
+      class="belum-muncul flex justify-center items-center h-screen text-white"
+      id="peta-graf"
+    >
+      <div class="grid grid-cols-2 gap-4">
+        <div>
+          <img src="/assets/svg/peta-graf-dark.svg" alt="peta" />
+        </div>
+        <div>
+          <h1 class="text-3xl font-bold">Peta</h1>
+          <p>Berikut adalah peta san viero dalam bentuk graf.</p>
+        </div>
+      </div>
+    </section>
+    <section
+      class="belum-muncul flex justify-center items-center h-screen"
+      id="peta-misi"
+    >
+      <div class="grid grid-cols-2 gap-4">
+        <div>
+          <img src="/assets/svg/peta-graf.svg" alt="peta" />
+        </div>
+        <div>
+          <h1 class="text-3xl font-bold">Peta</h1>
+          <p>Berikut adalah misi yang harus dijalankan CJ.</p>
+        </div>
+      </div>
+    </section>
+    <section
       class="belum-muncul text-white flex justify-center items-center h-screen"
       id="algoritma"
     >
