update peta graf

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     >
       <div class="grid grid-cols-2 gap-4">
         <div>
-          <img src="/assets/svg/peta-graf-dark.svg" alt="peta" />
+          <img src="/assets/svg/peta-graf-dark.svg" style="width: 60vh;"  alt="peta" />
         </div>
         <div>
           <h1 class="text-3xl font-bold">Peta</h1>
@@ -89,7 +89,7 @@
     >
       <div class="grid grid-cols-2 gap-4">
         <div>
-          <img src="/assets/svg/peta-graf.svg" alt="peta" />
+          <img src="/assets/svg/peta-misi.svg" style="width: 70vh;" alt="peta" />
         </div>
         <div>
           <h1 class="text-3xl font-bold">Peta</h1>
@@ -98,10 +98,11 @@
       </div>
     </section>
     <section
-      class="belum-muncul text-white flex justify-center items-center h-screen"
+      class="belum-muncul text-white flex justify-center items-center min-h-screen"
       id="algoritma"
     >
-    <div class="grid grid-cols-2 gap-10">
+    <div></div>
+    <div class="grid grid-cols-2 gap-10 mt-10">
       <div class="text-right">
         <h2 class="text-2xl font-bold mb-4">Algoritma</h2>
         <div class="mb-4">
@@ -146,11 +147,53 @@
 </html>
 
 <!-- Contoh input JSON:
-{
-  "A": { "B": 4, "C": 2 },
-  "B": { "D": 5 },
-  "C": { "B": 1, "D": 8 },
-  "D": { "E": 3 },
-  "E": {}
-} 
+{ 
+"A": {"B": 4}, 
+"B": {"A": 4, "C": 5, "D": 4, "E": 3}, 
+"C": {"B": 5, "H": 6 }, 
+"D": {"B": 5, "F": 3}, 
+"E": {"B": 3, "F": 4, "G": 3}, 
+"F": {"D": 3, "E": 4}, 
+"G": {"E": 3, "H": 5, "J": 3}, 
+"H": {"G": 5, "I": 3, "C": 6}, 
+"I": {"H": 3, "J": 5, "M": 8}, 
+"J": {"G": 3, "I": 5, "K": 1}, 
+"K": {"J": 1, "L": 4}, 
+"L": {"M": 5, "K": 4}, 
+"M": {"O": 2, "L": 5, "I": 8, "N": 6}, 
+"N": {"J": 6, "P": 9}, 
+"O": {"M": 2, "S": 10, "Z": 15}, 
+"P": { "N": 9, "R": 2, "T": 3}, 
+"Q": { "S": 3, "U": 3}, 
+"R": { "P": 2, "AA": 2, "AC": 3 }, 
+"S": { "O": 10, "Q": 3, "V": 3}, 
+"T": {"P": 3, "U": 2, "W": 3, "AC": 2}, 
+"U": { "Q": 3, "V": 3, "X": 3, "T": 2}, 
+"V": { "S": 3, "Y": 3, "U": 3}, 
+"W": { "T": 3, "AG": 2 }, 
+"X": { "U": 3, "Y": 3}, 
+"Y": {"V": 3, "X": 3}, 
+"Z": {"O": 15, "AK": 3, "AA": 3}
+"AA": {"AB": 3, "R": 2, "Z": 3, "AJ": 3}, 
+"AB": {"AA": 3, "AI": 3, "AC": 2, "AD": 1.5}, 
+"AC": {"R": 3, "AB": 2, "AE": 1.5, "T": 2 }, 
+"AD": {"AB": 1.5, "AF": 1.5, "AE": 2}, 
+"AE": {"AC": 1.5, "AG": 1.5, "AD": 2}, 
+"AF": {"AD": 1.5, "AG": 2, "AH": 3}, 
+"AG": {"W": 2, "AF": 2, "AE": 1.5}, 
+"AH": {"AF": 3, "AI": 3, "AO": 3}, 
+"AI": {"AH": 3, "AB": 3, "AJ": 3, "AN": 3}, 
+"AJ": {"AI": 3, "AM": 3, "AK": 3, "AA": 3}, 
+"AK": {"AL": 3, "Z": 3, "AJ": 3}, 
+"AL": {"AK": 3, "AM": 3}, 
+"AM": {"AL": 3, "AJ": 3, "AN": 3}, 
+"AN": {"AM": 3, "AI": 3, "AO": 3}, 
+"AO": {"AN": 3, "AH": 3} 
+}
+
+
+
+
+
+
 -->
