--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,40 @@
       style="background-image: url('/assets/images/pembuka.jpg')"
     >
       <div class="text-center text-white relative z-10">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="130%" class="blob-motion animasi-tulisan belum-muncul relative" id="blobSvg" style="opacity: 1;" filter="blur(0px)" transform="rotate(0)">                        <defs>                        <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">                            <stop offset="0%" style="stop-color: rgb(0, 0, 0);"></stop>                            <stop offset="100%" style="stop-color: rgb(0, 0, 0);"></stop>                        </linearGradient>                        </defs>                                            <path id="blob" fill="url(#gradient)" style="opacity: 0.55;"><animate attributeName="d" dur="3600ms" repeatCount="indefinite" values="M437.48517,301.93698Q392.82947,353.87396,357.50371,413.21131Q322.17795,472.54867,247.51112,479.51159Q172.8443,486.47452,129.54819,427.64458Q86.25209,368.81464,81.57785,309.40732Q76.90361,250,83.86283,191.93327Q90.82205,133.86654,141.98146,104.152Q193.14087,74.43745,247.01483,83.88926Q300.88878,93.34106,355.51112,113.62234Q410.13346,133.90361,446.13717,191.95181Q482.14087,250,437.48517,301.93698Z;M423.38828,307.00416Q406.39243,364.00831,353.55217,384.57202Q300.71191,405.13573,242.06787,430.50416Q183.42382,455.87258,116.5554,425.63666Q49.68697,395.40075,58.87581,322.70037Q68.06464,250,86.66067,197.31625Q105.2567,144.63251,148.86843,108.53648Q192.48015,72.44045,252.10019,66.13989Q311.72022,59.83933,378.54063,84.21929Q445.36105,108.59925,442.87258,179.29963Q440.38412,250,423.38828,307.00416Z;M402.82336,294.74662Q372.52122,339.49324,339.45366,380.77461Q306.3861,422.05598,251.70463,416.9165Q197.02317,411.77702,159.66506,377.28619Q122.30695,342.79537,72.75579,296.39768Q23.20463,250,37.88851,178.24662Q52.57238,106.49324,117.0304,72.97924Q181.48842,39.46525,238.53957,73.79537Q295.59073,108.12549,332.49083,135.50917Q369.39092,162.89286,401.2582,206.44643Q433.12549,250,402.82336,294.74662Z;M437.48517,301.93698Q392.82947,353.87396,357.50371,413.21131Q322.17795,472.54867,247.51112,479.51159Q172.8443,486.47452,129.54819,427.64458Q86.25209,368.81464,81.57785,309.40732Q76.90361,250,83.86283,191.93327Q90.82205,133.86654,141.98146,104.152Q193.14087,74.43745,247.01483,83.88926Q300.88878,93.34106,355.51112,113.62234Q410.13346,133.90361,446.13717,191.95181Q482.14087,250,437.48517,301.93698Z"></animate></path></svg>
-        <h1 class="text-4xl font-bold animasi-tulisan belum-muncul relative">Shortest Path Algorithms</h1>
-        <h2 class="text-2xl font-semibold animasi-tulisan belum-muncul relative">Kelompok:</h2>
+        <svg
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 500 500"
+          width="130%"
+          class="blob-motion animasi-tulisan belum-muncul relative"
+          id="blobSvg"
+          style="opacity: 1"
+          filter="blur(0px)"
+          transform="rotate(0)"
+        >
+          <defs>
+            <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+              <stop offset="0%" style="stop-color: rgb(0, 0, 0)"></stop>
+              <stop offset="100%" style="stop-color: rgb(0, 0, 0)"></stop>
+            </linearGradient>
+          </defs>
+          <path id="blob" fill="url(#gradient)" style="opacity: 0.55">
+            <animate
+              attributeName="d"
+              dur="3600ms"
+              repeatCount="indefinite"
+              values="M437.48517,301.93698Q392.82947,353.87396,357.50371,413.21131Q322.17795,472.54867,247.51112,479.51159Q172.8443,486.47452,129.54819,427.64458Q86.25209,368.81464,81.57785,309.40732Q76.90361,250,83.86283,191.93327Q90.82205,133.86654,141.98146,104.152Q193.14087,74.43745,247.01483,83.88926Q300.88878,93.34106,355.51112,113.62234Q410.13346,133.90361,446.13717,191.95181Q482.14087,250,437.48517,301.93698Z;M423.38828,307.00416Q406.39243,364.00831,353.55217,384.57202Q300.71191,405.13573,242.06787,430.50416Q183.42382,455.87258,116.5554,425.63666Q49.68697,395.40075,58.87581,322.70037Q68.06464,250,86.66067,197.31625Q105.2567,144.63251,148.86843,108.53648Q192.48015,72.44045,252.10019,66.13989Q311.72022,59.83933,378.54063,84.21929Q445.36105,108.59925,442.87258,179.29963Q440.38412,250,423.38828,307.00416Z;M402.82336,294.74662Q372.52122,339.49324,339.45366,380.77461Q306.3861,422.05598,251.70463,416.9165Q197.02317,411.77702,159.66506,377.28619Q122.30695,342.79537,72.75579,296.39768Q23.20463,250,37.88851,178.24662Q52.57238,106.49324,117.0304,72.97924Q181.48842,39.46525,238.53957,73.79537Q295.59073,108.12549,332.49083,135.50917Q369.39092,162.89286,401.2582,206.44643Q433.12549,250,402.82336,294.74662Z;M437.48517,301.93698Q392.82947,353.87396,357.50371,413.21131Q322.17795,472.54867,247.51112,479.51159Q172.8443,486.47452,129.54819,427.64458Q86.25209,368.81464,81.57785,309.40732Q76.90361,250,83.86283,191.93327Q90.82205,133.86654,141.98146,104.152Q193.14087,74.43745,247.01483,83.88926Q300.88878,93.34106,355.51112,113.62234Q410.13346,133.90361,446.13717,191.95181Q482.14087,250,437.48517,301.93698Z"
+            ></animate>
+          </path>
+        </svg>
+        <h1 class="text-4xl font-bold animasi-tulisan belum-muncul relative">
+          Shortest Path Algorithms
+        </h1>
+        <h2
+          class="text-2xl font-semibold animasi-tulisan belum-muncul relative"
+        >
+          Kelompok:
+        </h2>
         <p
           class="animasi-tulisan belum-muncul hidden-kiri relative"
           style="--order: 1"
@@ -75,7 +106,11 @@
     >
       <div class="grid grid-cols-2 gap-4">
         <div>
-          <img src="/assets/svg/peta-graf-dark.svg" style="width: 60vh;"  alt="peta" />
+          <img
+            src="/assets/svg/peta-graf-dark.svg"
+            style="width: 60vh"
+            alt="peta"
+          />
         </div>
         <div>
           <h1 class="text-3xl font-bold">Peta</h1>
@@ -89,7 +124,7 @@
     >
       <div class="grid grid-cols-2 gap-4">
         <div>
-          <img src="/assets/svg/peta-misi.svg" style="width: 70vh;" alt="peta" />
+          <img src="/assets/svg/peta-misi.svg" style="width: 70vh" alt="peta" />
         </div>
         <div>
           <h1 class="text-3xl font-bold">Peta</h1>
@@ -101,47 +136,56 @@
       class="belum-muncul text-white flex justify-center items-center min-h-screen"
       id="algoritma"
     >
-    <div></div>
-    <div class="grid grid-cols-2 gap-10 mt-10">
-      <div class="text-right">
-        <h2 class="text-2xl font-bold mb-4">Algoritma</h2>
-        <div class="mb-4">
-          <label for="source-node" class="block mb-1">Source Node:</label>
-          <input
-            type="text"
-            id="source-node"
-            placeholder="Masukkan titik awal"
-            class="px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 text-black"
-          />
+      <div></div>
+      <div class="grid grid-cols-2 gap-10 mt-10">
+        <div class="text-right">
+          <h2 class="text-2xl font-bold mb-4">Algoritma</h2>
+          <div class="mb-4">
+            <label for="source-node" class="block mb-1">Titik Awal:</label>
+            <input
+              type="text"
+              id="source-node"
+              placeholder="Masukkan titik awal"
+              class="px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 text-black"
+            />
+          </div>
+          <div class="mb-4">
+            <label for="source-node" class="block mb-1">Titik Tujuan:</label>
+            <input
+              type="text"
+              id="destination"
+              placeholder="Masukkan titik tujuan"
+              class="px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 text-black"
+            />
+          </div>
+          <div class="mb-4">
+            <label for="graph-input" class="block mb-1">Graph (JSON):</label>
+            <textarea
+              id="graph-input"
+              placeholder="Masukkan graf dalam format JSON"
+              rows="7"
+              cols="35"
+              class="px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 text-black"
+            ></textarea>
+          </div>
+          <button
+            onclick="runBellmanFord()"
+            class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
+          >
+            Run Bellman-Ford
+          </button>
+          <button
+            onclick="runDijkstra()"
+            class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
+          >
+            Run Dijkstra
+          </button>
         </div>
-        <div class="mb-4">
-          <label for="graph-input" class="block mb-1">Graph (JSON):</label>
-          <textarea
-            id="graph-input"
-            placeholder="Masukkan graf dalam format JSON"
-            rows="7"
-            cols="35"
-            class="px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 text-black"
-          ></textarea>
+        <div class="text-left">
+          <h2 class="text-2xl font-bold mb-4">Output</h2>
+          <div id="output"></div>
         </div>
-        <button
-          onclick="runBellmanFord()"
-          class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
-        >
-          Run Bellman-Ford
-        </button>
-        <button
-          onclick="runDijkstra()"
-          class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
-        >
-          Run Dijkstra
-        </button>
       </div>
-      <div class="text-left">
-        <h2 class="text-2xl font-bold mb-4">Output</h2>
-        <div id="output"></div>
-      </div>
-    </div>
     </section>
   </body>
 </html>
