--- a/public/index.html
+++ b/public/index.html
@@ -184,6 +184,7 @@
         <div class="text-left">
           <h2 class="text-2xl font-bold mb-4">Output</h2>
           <div id="output"></div>
+          <div id="run-time"></div>
         </div>
       </div>
     </section>
