--- a/public/index.html
+++ b/public/index.html
@@ -122,8 +122,8 @@
       class="belum-muncul flex justify-center items-center h-screen"
       id="peta-misi"
     >
-    <h1 class="text-3xl font-bold">Misi</h1>
-          <p>Bantu CJ menyelesaikan Misi.</p>
+      <h1 class="text-3xl font-bold">Misi</h1>
+      <p>Bantu CJ menyelesaikan Misi.</p>
       <div class="grid grid-cols-2 gap-4 mt-10">
         <div class="mr-40 peta-misi">
           <img src="/assets/svg/peta-misi.svg" style="width: 70vh" alt="peta" />
@@ -132,7 +132,9 @@
           <div class="text-left">
             <h2 class="text-2xl font-bold mb-4 mt-10">Algoritma</h2>
             <div class="mb-4">
-              <label for="source-node-default" class="block mb-1">Titik Awal:</label>
+              <label for="source-node-default" class="block mb-1"
+                >Titik Awal:</label
+              >
               <input
                 type="text"
                 id="source-node-default"
@@ -141,7 +143,9 @@
               />
             </div>
             <div class="mb-4">
-              <label for="destination-default" class="block mb-1">Titik Tujuan:</label>
+              <label for="destination-default" class="block mb-1"
+                >Titik Tujuan:</label
+              >
               <input
                 type="text"
                 id="destination-default"
@@ -150,21 +154,29 @@
               />
             </div>
             <button
-              onclick="runBellmanFordDefault()"
+            id="buttonbf"
+              onclick="runBellmanFordDefault();"
               class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
             >
               Run Bellman-Ford
             </button>
             <button
-              onclick="runDijkstraDefault()"
+            id="buttond"
+              onclick="runDijkstraDefault();"
               class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
             >
               Run Dijkstra
             </button>
+            <button
+              onclick="resetSemua();"
+              class="px-4 py-2 bg-red-500 text-white rounded hover:bg-blue-600"
+            >
+              Reset
+            </button>
             <h2 class="text-2xl font-bold mb-4 mt-10">Output</h2>
-          <div id="output-default"></div>
-          <div id="run-time-default"></div>
-          <div id="notif-misi"></div>
+            <div id="output-default"></div>
+            <div id="run-time-default"></div>
+            <div id="notif-misi"></div>
           </div>
         </div>
       </div>
@@ -173,7 +185,7 @@
       class="belum-muncul text-white flex justify-center items-center min-h-screen"
       id="algoritma"
     >
-    <h1 class="text-3xl font-bold">Program</h1>
+      <h1 class="text-3xl font-bold">Program</h1>
       <div class="grid grid-cols-2 gap-10 mt-10">
         <div class="text-right">
           <h2 class="text-2xl font-bold mb-4">Algoritma</h2>
@@ -233,46 +245,56 @@
 
 <!-- Contoh input JSON:
 { 
-"A": {"B": 4}, 
-"B": {"A": 4, "C": 5, "D": 4, "E": 3}, 
-"C": {"B": 5, "H": 6 }, 
-"D": {"B": 5, "F": 3}, 
-"E": {"B": 3, "F": 4, "G": 3}, 
+"A": {"B": 3}, 
+"B": {"A": 3, "C": 4, "D": 5, "E": 3}, 
+"C": {"B": 4, "H": 6 }, 
+"D": {"B": 5, "F": 2}, 
+"E": {"B": 3, "F": 4, "G": 2}, 
 "F": {"D": 3, "E": 4}, 
-"G": {"E": 3, "H": 5, "J": 3}, 
-"H": {"G": 5, "I": 3, "C": 6}, 
-"I": {"H": 3, "J": 5, "M": 8}, 
+"G": {"E": 2, "H": 4, "J": 3}, 
+"H": {"G": 4, "I": 2, "C": 6}, 
+"I": {"H": 2, "J": 5, "M": 10}, 
 "J": {"G": 3, "I": 5, "K": 1}, 
 "K": {"J": 1, "L": 4}, 
 "L": {"M": 5, "K": 4}, 
-"M": {"O": 2, "L": 5, "I": 8, "N": 6}, 
-"N": {"J": 6, "P": 9}, 
-"O": {"M": 2, "S": 10, "Z": 15}, 
-"P": { "N": 9, "R": 2, "T": 3}, 
-"Q": { "S": 3, "U": 3}, 
-"R": { "P": 2, "AA": 2, "AC": 3 }, 
-"S": { "O": 10, "Q": 3, "V": 3}, 
-"T": {"P": 3, "U": 2, "W": 3, "AC": 2}, 
-"U": { "Q": 3, "V": 3, "X": 3, "T": 2}, 
-"V": { "S": 3, "Y": 3, "U": 3}, 
-"W": { "T": 3, "AG": 2 }, 
-"X": { "U": 3, "Y": 3}, 
-"Y": {"V": 3, "X": 3}, 
-"Z": {"O": 15, "AK": 3, "AA": 3},
-"AA": {"AB": 3, "R": 2, "Z": 3, "AJ": 3}, 
-"AB": {"AA": 3, "AI": 3, "AC": 2, "AD": 1.5}, 
-"AC": {"R": 3, "AB": 2, "AE": 1.5, "T": 2 }, 
+"M": {"O": 2, "L": 5, "I": -10, "N": 6}, 
+"N": {"M": 6, "P": 9}, 
+"O": {"M": 2, "S": 10, "Z": -8}, 
+"P": { "N": 9, "R": 3, "T": 4}, 
+"Q": { "S": 4, "U": 2}, 
+"R": { "P": 3, "AA": 2, "AC": 5 }, 
+"S": { "O": 10, "Q": 4, "V": 2}, 
+"T": {"P": 4, "U": 1, "W": 2, "AC": 3}, 
+"U": { "Q": 2, "V": 3, "X": 2, "T": 1}, 
+"V": { "S": 2, "Y": 3, "U": 3}, 
+"W": { "T": 2, "AG": 3 }, 
+"X": { "U": 2, "Y": 4}, 
+"Y": {"V": 3, "X": 4}, 
+"Z": {"AK": 3, "AA": 6},
+"AA": {"AB": 3, "R": 2, "Z": 6, "AJ": 4}, 
+"AB": {"AA": 3, "AI": 3, "AC": 2.5, "AD": 1.5}, 
+"AC": {"R": 5, "AB": 2.5, "AE": 1.5, "T": 3 }, 
 "AD": {"AB": 1.5, "AF": 1.5, "AE": 2}, 
 "AE": {"AC": 1.5, "AG": 1.5, "AD": 2}, 
-"AF": {"AD": 1.5, "AG": 2, "AH": 3}, 
-"AG": {"W": 2, "AF": 2, "AE": 1.5}, 
-"AH": {"AF": 3, "AI": 3, "AO": 3}, 
-"AI": {"AH": 3, "AB": 3, "AJ": 3, "AN": 3}, 
-"AJ": {"AI": 3, "AM": 3, "AK": 3, "AA": 3}, 
-"AK": {"AL": 3, "Z": 3, "AJ": 3}, 
-"AL": {"AK": 3, "AM": 3}, 
-"AM": {"AL": 3, "AJ": 3, "AN": 3}, 
-"AN": {"AM": 3, "AI": 3, "AO": 3}, 
-"AO": {"AN": 3, "AH": 3} 
+"AF": {"AD": 1.5, "AG": 4, "AH": 3}, 
+"AG": {"W": 3, "AF": 4, "AE": 1.5}, 
+"AH": {"AF": 3, "AI": 4, "AO": 2}, 
+"AI": {"AH": 4, "AB": 3, "AJ": 2, "AN": 4}, 
+"AJ": {"AI": 2, "AM": 3, "AK": 5, "AA": 4}, 
+"AK": {"AL": 4, "Z": 3, "AJ": 5}, 
+"AL": {"AK": 4, "AM": 6}, 
+"AM": {"AL": 6, "AJ": 3, "AN": 3}, 
+"AN": {"AM": 3, "AI": 4, "AO": 5}, 
+"AO": {"AN": 5,  "AH": 2} 
 }
+
+{ 
+"A": {"B": 3}, 
+"B": {"A": 3, "C": 4, "D": 5, "E": 3}, 
+"C": {"B": 4, "A": 6 }, 
+"D": {"C": 5, "E": 2}, 
+"E": {"A": 5,  "D": 2} 
+}
+
+
 -->
