--- a/public/index.html
+++ b/public/index.html
@@ -186,6 +186,7 @@
       id="algoritma"
     >
       <h1 class="text-3xl font-bold">Program</h1>
+      <p>Disini Anda Bebas Menggunakan Program</p>
       <div class="grid grid-cols-2 gap-10 mt-10">
         <div class="text-right">
           <h2 class="text-2xl font-bold mb-4">Algoritma</h2>
