--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
       id="peta-misi"
     >
       <h1 class="text-3xl font-bold">Misi</h1>
-      <p>Bantu CJ menyelesaikan Misi.</p>
+      <p>Bantu CJ menyelesaikan Misi dengan mengantarkan obat ke Target 1, Target 2, dan Target 3 secara berurutan</p>
       <div class="grid grid-cols-2 gap-4 mt-10">
         <div class="mr-40 peta-misi">
           <img src="/assets/svg/peta-misi.svg" style="width: 70vh" alt="peta" />
