sedikit memperbaiki penampilan

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/algoritma.js"></script>
     <script defer src="js/index.js"></script>
+    <script src="https://kit.fontawesome.com/a54d2cbf95.js"></script>
   </head>
   <body>
     <section
@@ -41,11 +42,11 @@
             ></animate>
           </path>
         </svg>
-        <h1 class="text-4xl font-bold animasi-tulisan belum-muncul relative">
+        <h1 class="text-4xl font-bold animasi-tulisan belum-muncul hidden-kiri relative">
           Shortest Path Algorithms
         </h1>
         <h2
-          class="text-2xl font-semibold animasi-tulisan belum-muncul relative"
+          class="text-2xl font-semibold animasi-tulisan belum-muncul hidden-kiri relative"
         >
           Kelompok:
         </h2>
@@ -237,6 +238,9 @@
           <div id="run-time"></div>
         </div>
       </div>
+      <a href="#" class="to-top">
+        <i class="fas fa-chevron-up"></i>
+      </a>
     </section>
     <footer class="flex-rw">
       <p>Made with <span style="color: #e25555">❤</span> by Kelompok ...</p>
