memperbarui deskripsi pada section ke dua

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,9 @@
             ></animate>
           </path>
         </svg>
-        <h1 class="text-4xl font-bold animasi-tulisan belum-muncul hidden-kiri relative">
+        <h1
+          class="text-4xl font-bold animasi-tulisan belum-muncul hidden-kiri relative"
+        >
           Shortest Path Algorithms
         </h1>
         <h2
@@ -78,13 +80,15 @@
       id="pembuka"
     >
       <p class="animasi-tulisan belum-muncul max-w-7xl">
-        Carl Johnson (CJ), karakter fiksi yang ditugaskan untuk mengantarkan
-        obat-obatan untuk menyelamatkan nyawa orang dalam waktu terbatas. CJ
-        harus mencari solusi rute tercepat dan paling efisien. Dalam usahanya,
-        CJ menggunakan algoritma Bellman-Ford dan Dijkstra yang terkenal dalam
-        menemukan jalur optimal dalam teori graf. Dengan algoritma-algoritma ini
-        sebagai panduannya, CJ memulai perjalanan berisiko, berpacu melawan
-        waktu untuk menyelamatkan setiap detik dan nyawa yang berharga.
+        Carl Johnson (CJ), karakter fiksi yang mempunyai misi mulia untuk
+        menyelamatkan nyawa orang-orang yang terancam, dia mendapati dirinya
+        ditugaskan untuk mengantarkan obat-obatan. Dalam upayanya, CJ meminta
+        bantuan kepada anda untuk mencarikan CJ jalur yang paling efisien. Di
+        sini anda akan mengandalkan dua algoritma, yaitu Bellman-Ford dan
+        Dijkstra, yang terkenal karena kemampuannya dalam menemukan jalur
+        optimal dalam teori graf. Dengan bantuan anda sebagai pemandu jalan, CJ
+        memulai perjalanannya dalam menyelamatkan nyawa orang-orang yang
+        berharga.
       </p>
     </section>
     <section
@@ -124,7 +128,10 @@
       id="peta-misi"
     >
       <h1 class="text-3xl font-bold">Misi</h1>
-      <p>Bantu CJ menyelesaikan Misi dengan mengantarkan obat ke Target 1, Target 2, dan Target 3 secara berurutan</p>
+      <p>
+        Bantu CJ menyelesaikan Misi dengan mengantarkan obat ke Target 1, Target
+        2, dan Target 3 secara berurutan
+      </p>
       <div class="grid grid-cols-2 gap-4 mt-10">
         <div class="mr-40 peta-misi">
           <img src="/assets/svg/peta-misi.svg" style="width: 70vh" alt="peta" />
@@ -155,14 +162,14 @@
               />
             </div>
             <button
-            id="buttonbf"
+              id="buttonbf"
               onclick="runBellmanFordDefault();"
               class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
             >
               Run Bellman-Ford
             </button>
             <button
-            id="buttond"
+              id="buttond"
               onclick="runDijkstraDefault();"
               class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
             >
