merapikan sedikit tampilan

--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
       </a>
     </section>
     <footer class="flex-rw">
-      <p>Made with <span style="color: #e25555">❤</span> by Kelompok ...</p>
+      <p>Made with <span style="color: #e25555">❤</span> by Kelompok 2</p>
     </footer>
   </body>
 </html>
